# gkom

./: CMakeLists.txt  Makefile  README.md  camera.c  camera.h  gravity.c  gui.c  gui.h  math3d.c  math3d.h  mesh.c  mesh.h  node.h  object.c  object.h  shader.c  shader.h  skybox.c
include/: camera.h  celestial_body.h  depth_map.h  earth.h  file_util.h  gravity.h  light.h  math3d.h  mesh.h  node.h  object.h  orbit.h  skybox.h  sun.h
res/skybox/: sky_neg_x.tga  sky_neg_y.tga  sky_neg_z.tga  sky_pos_x.tga  sky_pos_y.tga  sky_pos_z.tga
shaders/: orbit.vert  planet.frag  planet.vert  shader.frag  shader.vert  shadow.frag  shadow.vert  skybox.frag  skybox.vs  sphere.frag  sphere.fs  sphere.vert  sphere.vs  sun.frag  sun.vert  texture.frag  texture.vert
src/: camera.c  celestial_body.c  depth_buffer.c  depth_map.c  earth.c  file_util.c  gravity.c  gui.c  light.c  math3d.c  mesh.c  node.c  object.c  orbit.c  shader.c  skybox.c  sun.c
